k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-prueba-k8s
  labels:
    app: prueba-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prueba-k8s
  template:
    metadata:
      labels:
        app: prueba-k8s
    spec:
      containers:
      - image: jmdpsysadmin/pruebak8s:v1
        name: contenedor-prueba-k8s
        ports:
        - name: portk8s
          containerPort: 5002
