k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-k8s
spec:
  type: NodePort
  ports:
  - name: service-http
    port: 80
    targetPort: portk8s
  selector:
    app: prueba-k8s
